css/styles.css
/* ... */
.social-icons a {
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
  font-size: 1.5em;
  text-decoration: none;
  transition: color 0.3s;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: 1px solid white;
  background-color: #ffffe3;
}

.social-icons a:hover {
  background-color: white;
  color: black;
}

/* From Uiverse.io by Gaurav-WebDev */
.button {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50px;
  width: 200px;
  position: relative;
  background-color: transparent;
  cursor: pointer;
  border: 2px solid #ffffe3;
  overflow: hidden;
  border-radius: 30px;
  color: #ffffe3;
  transition: all 0.5s ease-in-out;
  margin-top: 35px;
  text-decoration: none;
}

.btn-txt {
  z-index: 1;
  font-weight: 800;
  letter-spacing: 4px;
  font-family: "Hanken Grotesk", sans-serif;
}

.type1::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  transition: all 0.5s ease-in-out;
  background-color: #ffffe3;
  border-radius: 30px;
  visibility: hidden;
  height: 10px;
  width: 10px;
  z-index: -1;
}

.button:hover {
  outline: 2px solid #ffffe3;
  color: black;
  box-shadow: 0px 0px 10px rgba(37, 37, 37, 0.7);
}

.type1:hover::after {
  visibility: visible;
  transform: scale(100) translateX(2px);
}

h1 {
  font-size: 96px;
  margin: 0;
  font-weight: bold;
  line-height: 1;
}

#about {
  position: relative;
  width: 100%;
  height: 80vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
  border-top: 2px solid rgb(50 50 40);
  margin-top: 30px;
}

.about-content h2 {
  font-size: 48px;
  font-weight: 700;
  margin-top: 20px;
}

.about-content p {
  font-size: 18px;
  color: #ffffe3;
  max-width: 600px;
  line-height: 1.5;
  margin-top: 2rem;
  margin-right: 125px;
}

.about-info {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 70%;
}

.about-img {
  flex: 1;
  display: flex;
  justify-content: center;
}

.about-img img {
  max-width: 75%;
  height: auto;
  border-radius: 0.375rem;
}

#tech-stack {
  padding: 40px 20px;
  background-color: #0D0D0D;
  color: #ffffe3;
  text-align: center;
}

#tech-stack h2 {
  font-size: 48px;
  font-weight: 700;
  margin-bottom: 90px;
  text-align: center;
  margin-right: 900px;
}

.tech-stack {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2rem;
  margin-left: 95px;
}

.skill-card {
  background-color: transparent;
  border: 1px solid #444;
  border-radius: 0.375rem;
  padding: 16px;
  text-align: left;
  width: calc(15% - 20px);
  color: #fff;
  display: flex;
  flex-direction: row;
  align-items: center;
  transition: transform 0.3s, box-shadow 0.3s;
  filter: grayscale(100%);
}

.skill-card:hover {
  transform: translateY(-10px);
  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
  filter: grayscale(0%);
  border-color: #ffffe3;
}

.skill-card img {
  width: 50px;
  height: 50px;
  margin-bottom: 10px;
  margin-right: 15px;
}

.skill-card .text-container {
  display: flex;
  flex-direction: column;
}

.skill-card h3,
.skill-card p {
  margin: 0;
}

.skill-card h3 {
  font-size: 18px;
  font-weight: 600;
  margin-bottom: 2px;
}

.skill-card p {
  font-size: 14px;
  color: #b0afb0;
  margin-top: 0.05px;
}

#portfolio {
  padding: 200px 0;
  background: #000;
  margin-top: 50px;
}

#portfolio h2 {
  font-size: 48px;
  font-weight: 700;
  margin-bottom: 50px;
  text-align: center;
  color: #ffffe3;
  margin-right: 900px;
}

#portfolio .skills-container {
  display: flex;
  flex-wrap: wrap;
  gap: 30px;
  justify-content: center;
  padding: 0 50px;
  position: relative;
  width: 100%;
}

#portfolio .project-card {
  position: relative;
  list-style: none;
  width: 220px;
  transition: 0.3s ease;
  border-radius: 20px;
  overflow: hidden;
}

#portfolio .project-card::before {
  content: "";
  display: block;
  padding-top: 150%;
  width: 100%;
}

#portfolio .project-card img {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 20px;
  filter: brightness(0.9) saturate(1) contrast(1);
  transform-origin: bottom;
  transform: scale(1) translateZ(0);
  transition: 0.3s ease;
}

#portfolio .text-container {
  position: absolute;
  bottom: -100%;
  left: 0;
  width: 100%;
  padding: 25px;
  z-index: 1;
  background: rgba(255, 255, 255, 0.397);
  backdrop-filter: blur(5px);
  transition: 0.3s ease;
  box-sizing: border-box;
}

#portfolio .text-container p {
  color: black;
  font-size: 14px;
  font-weight: 500;
  letter-spacing: 5px;
  margin-bottom: 10px;
  text-transform: uppercase;
}

#portfolio .text-container h3 {
  color: #000;
  font-size: 24px;
  font-weight: 700;
  line-height: 1;
  text-transform: uppercase;
  background: linear-gradient(45deg, #000, #333);
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
  margin-bottom: 5px;
}

#portfolio .skills-container:hover .project-card:not(:hover) img {
  filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
}

#portfolio .project-card:hover {
  transform: scale(1.05);
  z-index: 1;
}

#portfolio .project-card:hover img {
  transform: scale(1.1);
  filter: brightness(1) saturate(1) contrast(1);
}

#portfolio .project-card:hover .text-container {
  bottom: 0;
}

.toggle-wrapper {
  display: flex;
  justify-content: center;
  align-items: left;
  margin: 2rem 0;
}

.toggleContainer {
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  width: 760px;
  border: 1px solid #ffffe3;
  border-radius: 8px;
  background: black;
  font-weight: bold;
  color: #ffffe3;
  cursor: pointer;
  margin-right: 335px;
}

.toggleContainer::before {
  content: '';
  position: absolute;
  width: 50%;
  height: 100%;
  left: 0%;
  border-radius: 8px;
  background: white;
  transition: all 0.3s;
}

.toggleCheckbox:checked + .toggleContainer::before {
  left: 50%;
}
/* ... */

